# foodgram

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
.envs/: .env.template
.github/workflows/: build_publish_docker.yaml  checks.yaml  main.yaml
backups/: foodgram-test-data.sql
docker/backend/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  default.conf
docs/: openapi-schema.yml
kubernetes/prod/: component_backend.yaml  component_django.yaml  component_frontend.yaml  component_react.yaml  configmap.yaml  cron_job_clearsessions.yaml  deploy.sh  django.yaml  ingress_service.yaml  job_django.yaml  secrets.yaml
src/.envs/: .env.template
src/backend/: .coveragerc  mypy.ini  pytest.ini  setup.cfg
src/backend/.envs/: .env.template
src/backend/.envs/.development/: .env.template
src/backend/.envs/.production/: .env.template
src/backend/apps/carts/: admin.py  apps.py  models.py  selectors.py  services.py
src/backend/apps/carts/migrations/: 0001_initial.py
src/backend/apps/carts/tests/: test_models.py
src/backend/apps/favourites/: admin.py  apps.py  models.py  selectors.py  services.py
src/backend/apps/favourites/api/: serializers.py
src/backend/apps/favourites/migrations/: 0001_initial.py  0002_rename_user_field.py  0003_rename_user_field_verbose_name.py  0004_add_recipe_user_unique_constraint.py
src/backend/apps/favourites/tests/: test_models.py
src/backend/apps/ingredients/: admin.py  apps.py  models.py
src/backend/apps/ingredients/api/: filters.py  serializers.py  views.py
src/backend/apps/ingredients/migrations/: 0001_initial.py  0002_auto_20220716_0129.py  0002_rename_ingredients_fields.py  0003_add_name_measurement_unit_unique_constraint.py  0004_add_char_felds_len_check_constraint.py
src/backend/apps/ingredients/tests/: test_management_commands.py  test_models.py
src/backend/apps/recipes/: admin.py  models.py  selectors.py
src/backend/apps/recipes/api/: filters.py  mixins.py  pagination.py  permissions.py  serializers.py  services.py  views.py
src/backend/apps/recipes/migrations/: 0001_initial.py  0002_rename_recipes_fields.py  0003_rename_quantity_recipeingredient_amount.py  0004_add_recipe_constraints.py  0005_add_recipe_ingredient_constraints.py
src/backend/apps/recipes/tests/: test_models.py
src/backend/apps/subscriptions/: admin.py  apps.py  models.py  selectors.py  services.py
src/backend/apps/subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_options.py  0003_add_subscription_prevent_self_follow_constraint.py  0004_add_subscriber_author_unique_together_constraints.py
src/backend/apps/tags/: admin.py  models.py  validators.py
src/backend/apps/users/: admin.py  forms.py  managers.py  models.py  selectors.py
src/backend/config/: api_router.py  settings.py  urls.py
src/backend/config/settings/: __init__.py
src/backend/config/utils/: storages.py
src/backend/docker/caddy/: Caddyfile
src/backend/docker/django/: Dockerfile  entrypoint.sh  gunicorn.sh  gunicorn_config.py
src/backend/docker/nginx/: Dockerfile  default.conf
src/backend/templates/: shopping_list.html
src/backend/tests/factories/: __init__.py  cart_factory.py  favourite_factory.py  ingredients_factory.py  recipe_factory.py  subscriptions_factory.py  tag_factory.py  user_factory.py
src/backend/tests/test_carts/: test_models.py
src/backend/tests/test_favourites/: test_models.py
src/backend/tests/test_ingredients/: test_management_commands.py  test_models.py
src/backend/tests/test_recipes/: test_models.py
src/backend/tests/test_subscriptions/: test_models.py
src/backend/tests/test_tags/: test_models.py
src/backend/tests/test_users/: test_api.py  test_models.py
src/frontend/docker/node/: Dockerfile
src/frontend/src/: index.js
src/frontend/src/api/: index.js
(+59 files in other folders)
