[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = ""
authors = ["Aleksandr Menshikov <menshikov.a.v@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.5"
environs = {extras = ["django"], version = "^9.5.0"}
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8-annotations = "^2.9.0"
flake8-annotations-coverage = "^0.0.6"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.13.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-quotes = "^3.3.1"
flake8-todo = "^0.7"
flake8-isort = "^4.1.1"
mypy = "^0.961"
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
